--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,15 +1,15 @@
 Package: onc.api
 Title:  Oceans 2.0 API Client Library
-Description: What the package does (one paragraph).
+Description: Allows users to discover and retrieve Ocean Networks Canada's oceanographic data in raw, text, image, audio, video or any other format available. Provides a class that wraps web service calls and business logic so that users can download data with a single line of code.
 Version: 2.0.1.0
 Authors@R: 
-    c(person("Dany", "Cabrera", role = c("aut", "cre"), email = "data@oceannetworks.ca"),
+    c(person("Dany", "Cabrera", role = c("aut", "cre"),
                person("Allan", "Rempel", role = "ctb"),
                person("Ryan", "Ross", role = "ctb"),
-               person("Bennit", "Mueller", role = "ctb"))
+               person("Bennit", "Mueller", role = "ctb"), email = "data@oceannetworks.ca"))
 Maintainer:  Bennit Mueller <data@oceannetworks.ca>
 URL:         https://wiki.oceannetworks.ca/display/O2A/Client+Libraries
-License: `use_mit_license()`, `use_gpl3_license()` + file LICENSE
+License: MIT + file LICENSE
 Imports:     anytime,
              httr,
              humanize,
