--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -16,7 +16,8 @@ Imports:     anytime,
              lubridate,
              stringi,
              tictoc,
-             utils
+             utils,
+             methods
 Encoding: UTF-8
 LazyData: true
 Roxygen: list(markdown = TRUE)
